test/visibility/except/queryExcept.good
queryExcept.chpl:6: error: syntax error near '?t'
